--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,9 @@ body {
   width: 100%;
   font-family: "Kumbh Sans", sans-serif;
 }
+.mar-1 {
+  margin: 1rem;
+}
 .sneaker__main {
   width: 100%;
   min-height: 100vh;
@@ -91,12 +94,16 @@ body {
 }
 .cart-box {
   position: absolute;
+  top: 0;
   right: 0;
-  width: 30rem;
+  width: 32rem;
   min-height: 20rem;
   background-color: var(--LightGrayishBlue);
-  transform: translate(4rem, 13rem);
+  transform: translateY(-2rem);
   box-shadow: 3px 2px 18px rgb(79, 77, 77);
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 .cart {
   height: 4rem;
@@ -106,12 +113,30 @@ body {
   font-size: 1.4rem;
   color: var(--DarkGrayishBlue);
 }
+.cart-item {
+  height: 5rem;
+  width: 100%;
+  padding: 0 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+}
+.cart-img-box {
+  width: 5rem;
+  height: 5rem;
+}
+.delete-btn {
+  width: 2rem;
+  height: 2rem;
+}
 .sneaker__section {
   margin-inline: 15rem;
   display: flex;
   flex-direction: row;
   gap: 7rem;
   padding-block: 7rem;
+  position: relative;
 }
 .sneaker__gallery {
   width: 50%;
@@ -170,6 +195,9 @@ body {
   color: var(--DarkGrayishBlue);
   line-height: 2.5rem;
 }
+.sneaker__discription strong {
+  color: black;
+}
 .sneaker__price {
   font-size: 1.8rem;
   font-weight: 700;
@@ -202,7 +230,7 @@ body {
 .sneaker__counter {
   display: flex;
   align-items: center;
-  width: 15rem;
+  width: 100%;
   height: 4rem;
 }
 .sneaker__counter span {
@@ -220,10 +248,11 @@ body {
   border: none;
   font-size: 3rem;
   background-color: transparent;
+  cursor: pointer;
 }
 .add-to-cart {
-  height: inherit;
-  width: 50%;
+  height: 4rem;
+  width: 90%;
   background-color: var(--Orange);
   border: none;
   border-radius: 0.5rem;
@@ -232,6 +261,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  cursor: pointer;
 }
 .cart-img {
   width: 1.5rem;
@@ -254,4 +284,7 @@ body {
   border: 4px solid var(--Orange);
   opacity: 1;
   opacity: 1;
+}
+.hidden {
+  display: none;
 }
