--- a/src/index.css
+++ b/src/index.css
@@ -131,12 +131,14 @@ body {
   right: 0;
   width: 32rem;
   min-height: 20rem;
+  border-radius: 1rem;
   background-color: var(--LightGrayishBlue);
   transform: translateY(-2rem);
   box-shadow: 3px 2px 18px rgb(79, 77, 77);
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  margin: 2rem;
 }
 .cart {
   height: 4rem;
@@ -349,6 +351,9 @@ body {
 .hidden {
   display: none;
 }
+.w-80 {
+  align-self: center;
+}
 @media (max-width: 936px) {
   .navBar__options {
     display: none;
@@ -382,16 +387,19 @@ body {
     margin: 0 1rem;
   }
   .sneaker__cart {
-    height: 8rem;
+    height: 9rem;
     gap: 0;
     flex-direction: column;
     align-items: initial;
     gap: 1rem;
   }
-  .add-to-cart {
-    width: 100%;
-  }
+
   .img-btn {
     display: flex;
+  }
+  .sneaker__price {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 }
